--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <link href="default_theme.min.css" rel="stylesheet">
+
+    <link href="lib/slick-carousel/slick.css" rel="stylesheet" />
+    <link href="lib/slick-carousel/slick-theme.css" rel="stylesheet" />
+
 </head>
 <body class="bodydefinition">
 
+
     <ui-view></ui-view>
 
+    <script src="lib/jquery/js/jquery.min.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/angular-ui-router.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+
+    <script src="lib/slick-carousel/slick.min.js"></script>
+    <script src="lib/angular-slick/slick.js"></script>
+
+    <script type="text/javascript" src="app.js?v=222"></script>
 </body>
 </html>
