Test file changes in dottilotti.ch

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <script src="lib/angular-slick/slick.js"></script>
 
     <script type="text/javascript" src="app.js?v=1003"></script>
+    <!--Test file changes in http://dottilotti.ch-->
 </body>
 </html>
