--- a/product_3.html
+++ b/product_3.html
@@ -69,11 +69,11 @@
                     <img class="img-responsive" src="images/product28.jpg" alt="">
                 </a>
             </div>
-            <div class="col-lg-4 col-md-4 col-xs-6 thumb">
+            <!-- <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="detail_glitz_punkte.html">
                     <img class="img-responsive" src="images/product29.jpg" alt="">
                 </a>
-            </div>
+            </div> -->
             <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="detail_glitz_blau.html">
                     <img class="img-responsive" src="images/product30.jpg" alt="">
@@ -84,11 +84,11 @@
                     <img class="img-responsive" src="images/product31.jpg" alt="">
                 </a>
             </div>
-            <div class="col-lg-4 col-md-4 col-xs-6 thumb">
+            <!-- <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="detail_glitz_schwaz.html">
                     <img class="img-responsive" src="images/product32.jpg" alt="">
                 </a>
-            </div>
+            </div> -->
 
             <div class="#">
                     <ul class="pagination">
